# aiot-edge-gateway

./: .gitignore  CMakeLists.txt  方案设计.md
.cache/clangd/index/: Logger.cpp.A8E3492645EF1F49.idx  Logger.h.2040997A08D3873C.idx  Protocol.cpp.87DC9492E45ACC6B.idx  Protocol.h.37E1A3B48DA045C8.idx  RingBuffer.cpp.580C3C446290F9E4.idx  RingBuffer.h.1988C0C3B521AF55.idx  Session.cpp.B14946F448570FC8.idx  Session.h.C363E0D098C8782B.idx  ShmLayout.h.A694C9E8FEF04321.idx  TcpServer.cpp.512B0EFBCF924505.idx  TcpServer.h.BEC4783E30569786.idx  TlvProtocol.cpp.4AE617B050402C7F.idx  TlvProtocol.h.EBB4BA5901DE1215.idx  main.cpp.810A942B8A787B85.idx  mock_sensor.cpp.CEEE6358A984A91C.idx  test_Protocol.cpp.08F929E7E4929A3D.idx  test_RingBuffer.cpp.870CCF10B8F8F2BC.idx  test_Session.cpp.4F6293749BD3E9A3.idx  test_ShmLayout.cpp.869F08EB83D58E77.idx  test_TlvProtocol.cpp.E4CF5D846060A5C2.idx
common/: CMakeLists.txt  Config.cpp  Config.h  DriverLoader.cpp  DriverLoader.h  GpioDriver.cpp  GpioDriver.h  HttpDashboard.cpp  HttpDashboard.h  ISensorDriver.h  ISouthbound.h  InternalMessage.cpp  InternalMessage.h  Logger.cpp  Logger.h  ModbusRtu.cpp  ModbusRtu.h  Protocol.cpp  Protocol.h  RingBuffer.cpp  RingBuffer.h  Sha256.cpp  Sha256.h  ShmLayout.h  ShmReader.cpp  SpscQueue.h  TlvProtocol.cpp  TlvProtocol.h
conf/: ai_rules.json  gateway.conf
gateway_access/: CMakeLists.txt  ModbusPoller.cpp  ModbusPoller.h  ModbusRtuDriver.cpp  ModbusRtuDriver.h  ModbusTcpDriver.cpp  ModbusTcpDriver.h  Session.cpp  Session.h  TcpServer.cpp  TcpServer.h  UdsClient.cpp  UdsClient.h  main.cpp
gateway_core/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DbWriter.cpp  DbWriter.h  EngineManager.cpp  EngineManager.h  EventFusion.cpp  EventFusion.h  EventLoop.cpp  EventLoop.h  MqttClient.cpp  MqttClient.h  OfflineStore.cpp  OfflineStore.h  OtaManager.cpp  OtaManager.h  RpcHandler.cpp  RpcHandler.h  RuleEngine.cpp  RuleEngine.h  ShmPublisher.cpp  ShmPublisher.h  SqliteStore.cpp  SqliteStore.h  main.cpp
gateway_engine/: AnalysisScheduler.cpp  AnalysisScheduler.h  CMakeLists.txt  HearbeatReporter.cpp  HearbeatReporter.h  HeartbeatReporter.cpp  HeartbeatReporter.h  main.cpp  placeholder.cpp
gateway_engine/pipeline/: FramePool.cpp  FramePool.h  Pipeline.cpp  Pipeline.h  PipelineQueue.h  types.h
gateway_engine/pipeline/stages/: CaptureStage.cpp  CaptureStage.h  InferenceStage.cpp  InferenceStage.h  PostprocessStage.cpp  PostprocessStage.h  PreprocessStage.cpp  PreprocessStage.h  StageBase.h
gateway_monitor/: AiSnapshotWidget.cpp  AiSnapshotWidget.h  AlarmTableWidget.cpp  AlarmTableWidget.h  CMakeLists.txt  DashboardWidget.cpp  DashboardWidget.h  HistoryPanel.cpp  HistoryPanel.h  MonitorWindow.cpp  MonitorWindow.h  NodePanel.cpp  NodePanel.h  SensorChartWidget.cpp  SensorChartWidget.h  ShmReader.cpp  ShmReader.h  main.cpp
gateway_watchdog/: CMakeLists.txt  main.cpp
models/: README.txt  model_version.json  yolov8n.rknn
scripts/: gateway_watchdog.service  run_board_tests.sh  setup_cgroups.sh  start_gateway.sh  stop_gateway.sh
tests/: CMakeLists.txt  test_DbWriter.cpp  test_EventFusion.cpp  test_EventLoop.cpp  test_FramePool.cpp  test_InternalMessage.cpp  test_ModbusRtu.cpp  test_ModbusTcp.cpp  test_PipelineFps.cpp  test_PipelineQueue.cpp  test_Protocol.cpp  test_RingBuffer.cpp  test_RuleEngine.cpp  test_Session.cpp  test_ShmLayout.cpp  test_ShmPublisher.cpp  test_ShmReader.cpp  test_SpscQueue.cpp  test_SqliteStore.cpp  test_StageBase.cpp  test_TlvProtocol.cpp
tools/: CMakeLists.txt  mock_cloud_listener.cpp  mock_modbus_sensor.py  mock_modbus_tcp_sensor.py  mock_sensor.cpp  pressure_test.py  uart_loopback_test.c  yolov5_convert.py
